2011-01-04  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Epson/epalc280.ppd, PPD/Epson/epalc420.ppd,
	  PPD/Epson/epalm400.ppd: Removed executable bit to silence rpmlint
	  warnings (bug #606). Thanks to Christopher Yeleighton (giecrilj at
	  stegny dot 2a dot pl) for the report

	* README: Fixed typos (same as in bug #608).

2010-12-13  Tim Waugh <twaugh@redhat.com>

	* db/source/printer/Canon-imageRunner_3225.xml (RH bug #651500),
	  db/source/printer/HP-Color_LaserJet_2500.xml (RH bug #659042),
	  db/source/printer/HP-Color_LaserJet_3700.xml (RH bug #659042),
	  db/source/printer/HP-Color_LaserJet_3800.xml (RH bug #581936),
	  db/source/printer/HP-Color_LaserJet_4550.xml (RH bug #659042),
	  db/source/printer/HP-Color_LaserJet_4650.xml (RH bug #659042),
	  db/source/printer/HP-Color_LaserJet_4700.xml (RH bug #659042),
	  db/source/printer/HP-Color_LaserJet_5550.xml (RH bug #659042),
	  db/source/printer/HP-Color_LaserJet_CM4730_MFP.xml (RH bug
	  #658838),
	  db/source/printer/HP-DeskJet_1280.xml (RH bug #577870),
	  db/source/printer/HP-DeskJet_D2300.xml (RH bug #580341),
	  db/source/printer/HP-DeskJet_D4100.xml (RH bug #658091),
	  db/source/printer/HP-DeskJet_F2100.xml (RH bug #579245),
	  db/source/printer/HP-LaserJet_4050.xml (RH bug #659041),
	  db/source/printer/HP-LaserJet_4100.xml (RH bug #659041),
	  db/source/printer/HP-LaserJet_4350.xml (RH bug #659041),
	  db/source/printer/HP-LaserJet_5100.xml (RH bug #659041),
	  db/source/printer/HP-LaserJet_8000.xml (RH bug #659041),
	  db/source/printer/HP-LaserJet_P3005.xml (RH bug #659041),
	  db/source/printer/HP-OfficeJet_7300.xml (RH bug #577897),
	  db/source/printer/HP-PSC_2400.xml (RH bug #188419),
	  db/source/printer/HP-PhotoSmart_7400.xml (RH bug #577866),
	  db/source/printer/Lexmark-E120.xml (RH bug #577881):
	  Added/corrected IEEE 1284 Device IDs.

2010-12-15  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Documented special entities for inserting job parameters,