@@ -1,13 +1,13 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(db/source/driver/ljet4.xml)
 
-dnl If the user didn't specify the $sysconfdir on the command line, let it
-dnl be /etc, not /usr/local/etc or /usr/etc
+# If the user didn't specify the $sysconfdir on the command line, let it
+# be /etc, not /usr/local/etc or /usr/etc
 if [[ x$sysconfdir = 'x${prefix}/etc' ]]; then
   sysconfdir=/etc
 fi
 
-dnl Checks for programs.
+# Checks for programs.
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
 
@@ -15,10 +15,10 @@ SBINSEARCHPATH=/usr/sbin:/sbin:/usr/local/sbin:/etc/sbin
 BINSEARCHPATH=/usr/bin:/bin:/usr/local/bin
 DATASEARCHPATH=/usr/share:/usr/local/share:/usr/lib:/usr/local/lib:/opt
 BSB=$BINSEARCHPATH:$SBINSEARCHPATH
-AC_PATH_DIRS(CUPS_PPDS,cups/model,CUPS_PPDS_NOT_FOUND,$DATASEARCHPATH)
+FM_PATH_DIRS(CUPS_PPDS,cups/model,CUPS_PPDS_NOT_FOUND,$DATASEARCHPATH)
 AC_PATH_PROG(GZIP,gzip,GZIP_NOT_FOUND,$BSB)
 
-dnl disable PPD file compression
+# disable PPD file compression
 AC_MSG_CHECKING(PPD file gzip compression)
 AC_ARG_ENABLE( gzip-ppds,
 [  --disable-gzip-ppds     disable gzipping of custom PPD files],
@@ -40,7 +40,7 @@ fi
 AC_MSG_RESULT($GZIP_PPDS)
 AC_SUBST(GZIP_PPDS)
 
-dnl disable linking custom PPD files to CUPS PPDs (/usr/share/cups/model)
+# disable linking custom PPD files to CUPS PPDs (/usr/share/cups/model)
 AC_MSG_CHECKING(making PPD files available to CUPS)
 AC_ARG_ENABLE( ppds-to-cups,
 [  --disable-ppds-to-cups  disable making custom PPDs available to CUPS],
@@ -62,7 +62,7 @@ fi
 AC_MSG_RESULT($PPDS_TO_CUPS)
 AC_SUBST(PPDS_TO_CUPS)
 
-dnl look for driver XMLs to include...
+# look for driver XMLs to include...
 AC_ARG_WITH(drivers,
 [  --with-drivers=LIST     Drivers to include, separated by commas.
                           Either list the drivers or use aliases:
@@ -95,13 +95,13 @@ if test "x$driversfile" != x; then
 	drivers="`tr '\n' ',' <$driversfile`"
 fi
 
-dnl If first item in the driver list is an excluding alias, assume that
-dnl we want to exclude these items from all drivers
+# If first item in the driver list is an excluding alias, assume that
+# we want to exclude these items from all drivers
 if `echo $drivers | egrep '^\s*(NO|ONLY)' > /dev/null`; then
    drivers="ALL,$drivers"
 fi
 
-dnl Check which driver XML files we will install
+# Check which driver XML files we will install
 DRIVERXMLS="";
 
 while test -n "$drivers"; do
@@ -170,11 +170,9 @@ while test -n "$drivers"; do
 done
 AC_SUBST(DRIVERXMLS)
 
-dnl AC_OUTPUT(Makefile src/Makefile)
-AC_OUTPUT(Makefile)
+AC_CONFIG_FILES(Makefile)
+AC_OUTPUT
 
-dnl Finished
+# Finished
 echo "Finished configuring."
-dnl echo "Type 'make' to build the package"
-dnl echo "then 'make install' to install it."
 echo "Type 'make install' to install the package."
