@@ -1,9 +1,12 @@
 2011-01-04  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* acinclude.m4, configure.ac: General cleanup (as in bugs #609,
+	  #610, #611).
+
 	* PPD/Epson/epalc280.ppd, PPD/Epson/epalc420.ppd,
 	  PPD/Epson/epalm400.ppd: Removed executable bit to silence rpmlint
 	  warnings (bug #606). Thanks to Christopher Yeleighton (giecrilj at
-	  stegny dot 2a dot pl) for the report
+	  stegny dot 2a dot pl) for the report.
 
 	* README: Fixed typos (same as in bug #608).
 
